# cpython-test-lib

./: README.md  __init__.py  build.sh  meson.build  setup.py
include/mycpythonlib/: haversine.hpp
mycpythonlibrary/: build.sh  meson.build  meson_options.txt
mycpythonlibrary/include/mycpythonlib/: haversine.hpp
mycpythonlibrary/src/: bindings.cpp  haversine.cpp  haversine.h
mycpythonlibrary/tests/: test_myfunction.py
src/: haversine.cpp
